The next attempt to keep the background images fixed on mobile

--- a/app/assets/stylesheets/layouts/_body.scss
+++ b/app/assets/stylesheets/layouts/_body.scss
@@ -3,3 +3,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+@media (max-width: 800px) {
+  background-attachment: initial;
+}
